crates/service/tests/references/snapshots/features__references__table_def_int_idx.snap
---
source: crates/service/tests/references/mod.rs
expression: include_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 2,
        "character": 3
      },
      "end": {
        "line": 2,
        "character": 8
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 4,
        "character": 16
      },
      "end": {
        "line": 4,
        "character": 17
      }
    }
  }
]
